# contracts

./: .bumpversion.cfg  .dockerignore  .env  .env.example  .eslintrc  .gitignore  .solcover.js  .solhint.json  .soliumrc.json  .travis.yml  CHANGELOG.md  Dockerfile  MANIFEST.in  README.md  README_Arhitecture.md  address.json  bumpversion.sh  codecov.yml  coverage.json  hardhat.config.barge.js  hardhat.config.js  package-lock.json  package.json  setup.cfg  setup.py  slitherReport.txt  truffle-config.js  truffle.js
.github/: CODEOWNERS  ci.yaml  dependabot.yml
.openzeppelin/: .session  dev-1584699791783.json  project.json
addresses/: address.json
artifacts/: BConst.json  BFactory.json  BMath.json  BNum.json  BPool.json  BToken.json  BTokenBase.json  Context.json  Converter.json  DDO.json  DTFactory.json  DataTokenTemplate.json  Deployer.json  Dispenser.json  ECDSA.json  ERC20.json  ERC20Pausable.json  FixedRateExchange.json  IERC20.json  IERC20Template.json  Metadata.json  Migrations.json  OPFCommunityFeeCollector.json  Ownable.json  SFactory.json  SPool.json  SafeMath.json  address.json
contracts/: DDO.sol  DTFactory.sol  DataToken.sol  DataTokenTemplate.sol  Deployer.sol  ERC20Factory.sol  ERC20Payable.sol  ERC20Template.sol  ERC721Factory.sol  Factory.sol  Fees.sol  FlattenERC721.sol  IERC20Payable.sol  Registry.sol  SFactory.sol  TokenFactory.sol  TokenRegistry.sol
contracts-old/: DataToken.sol  Fees.sol
coverage/: coverage-final.json  index.html  lcov.info
docs/: ERC721Factory.md  Factory.md  Migrations.md  README.md  RELEASE_PROCESS.md  Registry.md  (+8 more)
(+948 files in other folders)
