[metadata]
name = ocean-contracts
version = 1.0.0a1
author = leucothia
author_email = devops@oceanprotocol.com
description =  ðŸ³ Ocean Protocol L1 - v4
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/oceanprotocol/contracts
project_urls =
    Bug Tracker = https://github.com/oceanprotocol/contracts/issues
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Programming Language :: Python :: 3.6
keywords = ocean-contracts

[options]
package_dir =
    =artifacts
packages = find:
python_requires = >=3.6
include_package_data = True
zip_safe=False

[options.packages.find]
where = artifacts